Going for the hail mary

--- a/custom_components/tuya/manifest.json
+++ b/custom_components/tuya/manifest.json
@@ -1,10 +1,10 @@
 {
-    "domain": "tuya",
-    "name": "Tuya",
+    "domain": "jazzyjake-tuya",
+    "name": "JazzyJake's Custom Tuya Integration",
     "documentation": "https://www.home-assistant.io/integrations/tuya",
     "requirements": ["tuya-iot-py-sdk==0.6.3"],
     "dependencies": ["ffmpeg"],
-    "codeowners": ["@Tuya", "@zlinoliver", "@METISU", "@frenck"],
+    "codeowners": ["@JazzyJake"],
     "config_flow": true,
     "iot_class": "cloud_push",
     "dhcp": [
